--- a/app/src/main/res/layout/activity_add_new_story.xml
+++ b/app/src/main/res/layout/activity_add_new_story.xml
@@ -6,12 +6,21 @@
     android:layout_height="match_parent"
     tools:context="com.android.StoryList.AddNewStory">
 
+  <ImageButton
+      android:id="@+id/cancelAddingPostButton"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:background="#E6E6E6"
+      android:onClick="goToFeedsActivity"
+      android:scaleType="fitCenter"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/close_button" />
   <ImageView
       android:id="@+id/InputStoryImage"
       android:layout_width="match_parent"
       android:layout_height="200dp"
       app:layout_constraintBottom_toTopOf="@id/textInputLayout1"
-      app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/cancelAddingPostButton"
       app:srcCompat="@android:drawable/ic_menu_report_image" />
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout1"
@@ -27,8 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textMultiLine|textCapSentences|textAutoComplete"
-        android:text="Title" />
+        android:hint="Title"
+        android:inputType="textMultiLine|textCapSentences|textAutoComplete" />
   </com.google.android.material.textfield.TextInputLayout>
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayout2"
@@ -50,6 +59,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="Description"
         android:inputType="textMultiLine|textCapSentences|textAutoComplete" />
   </com.google.android.material.textfield.TextInputLayout>
   <Button
