--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -77,10 +77,10 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingBottom="4dp"
-      android:fontFamily="@font/montserrat"
-      android:textColor="#ffffff"
+      android:fontFamily="@font/caveat"
       android:paddingHorizontal="10dp"
       android:paddingVertical="4dp"
       android:text="MainBody"
-      android:textSize="16sp" />
+      android:textColor="#ffffff"
+      android:textSize="20sp" />
 </LinearLayout>
