--- a/app/src/main/res/layout/activity_add_new_story.xml
+++ b/app/src/main/res/layout/activity_add_new_story.xml
@@ -7,6 +7,25 @@
     tools:context="com.android.StoryList.AddNewStory">
 
   <ImageView
+      android:id="@+id/LoggedInUserImage"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:padding="12dp"
+      app:srcCompat="@drawable/user_icon_dark"
+      app:layout_constraintTop_toBottomOf="@id/InputStoryMainBody"
+      app:layout_constraintLeft_toLeftOf="parent"
+      />
+  <TextView
+      android:id="@+id/LoggedInUserName"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingVertical="12dp"
+      android:text="anonymous"
+      android:textSize="14sp"
+      app:layout_constraintTop_toBottomOf="@id/InputStoryMainBody"
+      app:layout_constraintLeft_toRightOf="@id/LoggedInUserImage"
+      />
+  <ImageView
       android:id="@+id/InputStoryImage"
       android:layout_width="match_parent"
       android:layout_height="200dp"
@@ -49,5 +68,5 @@
       android:layout_weight="1"
       android:layout_marginTop="20dp"
       android:text="Post New Story"
-      app:layout_constraintTop_toBottomOf="@id/InputStoryMainBody" />
+      app:layout_constraintTop_toBottomOf="@id/LoggedInUserName" />
 </androidx.constraintlayout.widget.ConstraintLayout>
