Refine user login.

--- a/app/src/main/res/menu/main_activity_option_menu.xml
+++ b/app/src/main/res/menu/main_activity_option_menu.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
-      android:id="@+id/UserLoginMenuItem"
+      android:id="@+id/UserProfileMenuItem"
       android:enabled="true"
       android:icon="@drawable/user_icon"
-      android:title="UserLoginMenuItem"
+      android:title="UserProfileMenuItem"
       android:visible="true"
       app:showAsAction="always" />
   <item
