--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="30dp">
+    android:layout_margin="10dp"
+    android:layout_marginTop="0dp">
 
   <Button
       android:id="@+id/LoginUserButton"
@@ -24,8 +25,8 @@
       android:layout_height="wrap_content"
       android:layout_margin="20dp"
       android:padding="10dp"
-      android:hint="Password"
       android:ems="12"
+      android:hint="Password"
       android:inputType="textPassword"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
@@ -42,13 +43,30 @@
       android:inputType="textEmailAddress"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toBottomOf="@id/LoginPageInformativeMessage" />
+  <ImageView
+      android:id="@+id/LoginPageAppLogo"
+      android:layout_width="match_parent"
+      android:layout_height="48dp"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@drawable/ic_launcher_foreground" />
+  <TextView
+      android:id="@+id/LoginPageInformativeMessage"
+      android:layout_width="match_parent"
+      android:layout_height="40dp"
+      android:padding="10dp"
+      android:textAlignment="center"
+      android:textColor="@color/black"
+      app:layout_constraintLeft_toLeftOf="parent"
+
+      app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/LoginPageAppName" />
   <TextView
       android:id="@+id/LoginPageAppName"
       android:textStyle="bold|italic"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_margin="30dp"
+      android:layout_margin="20dp"
       android:padding="10dp"
       android:text="StoryList"
       android:textAlignment="center"
@@ -56,7 +74,7 @@
       android:textSize="32sp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toBottomOf="@id/LoginPageAppLogo" />
   <TextView
       android:id="@+id/LoginPageRegistrationRedirectionMessage"
       android:textStyle="italic"
@@ -70,6 +88,5 @@
       android:textSize="20sp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/LoginUserButton"
-    />
+      app:layout_constraintTop_toBottomOf="@id/LoginUserButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
