--- a/app/src/main/res/layout/user_login_activity.xml
+++ b/app/src/main/res/layout/user_login_activity.xml
@@ -11,8 +11,8 @@
       android:id="@+id/LoginUserButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_margin="30dp"
-      android:padding="20dp"
+      android:layout_margin="20dp"
+      android:padding="10dp"
       android:text="Login"
       android:textSize="16sp"
 
@@ -89,4 +89,16 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/LoginUserButton" />
+  <ProgressBar
+      android:id="@+id/progressBar"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:gravity="center"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+  />
 </androidx.constraintlayout.widget.ConstraintLayout>
