--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -6,4 +6,86 @@
     android:layout_height="match_parent"
     tools:context="com.android.StoryList.UserProfile">
 
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:orientation="horizontal">
+      <ImageView
+          android:id="@+id/imageView"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          app:srcCompat="@drawable/user_icon_dark" />
+      <TextView
+          android:id="@+id/textView"
+          android:layout_width="wrap_content"
+          android:layout_height="50dp"
+          android:padding="10dp"
+          android:gravity="center_vertical"
+          android:text="Admin"
+          android:textAlignment="center"
+          android:textSize="16sp" />
+    </LinearLayout>
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="12dp"
+        android:text="This page is under construction. The stories you have added will appear below. Click here to go back." />
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:background="@color/black"
+        android:text="TextView" />
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+      <TableRow
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" >
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="140dp"
+            android:layout_weight="1"
+            android:padding="1dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/antelopecanyon" />
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="140dp"
+            android:layout_weight="1"
+            android:padding="1dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/aqueductsegovia" />
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="wrap_content"
+            android:layout_height="140dp"
+            android:layout_weight="1"
+            android:padding="1dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            app:srcCompat="@drawable/pantheon" />
+      </TableRow>
+      <TableRow
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+      <TableRow
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+      <TableRow
+          android:layout_width="match_parent"
+          android:layout_height="match_parent" />
+    </TableLayout>
+  </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
