--- a/app/src/main/res/layout/user_registration_activity.xml
+++ b/app/src/main/res/layout/user_registration_activity.xml
@@ -96,4 +96,16 @@
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toBottomOf="@id/RegisterUserButton"
       />
+  <ProgressBar
+      android:id="@id/progressBar"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:gravity="center"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+  />
 </androidx.constraintlayout.widget.ConstraintLayout>
