--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,4 +16,39 @@
     <!-- Customize your theme here. -->
     <item name= "android:fontFamily" > @font/montserrat </item>
   </style>
+
+  <!-- Blue and Grey Theme. -->
+  <style name="Theme.GrayAndBlue" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Primary brand color. -->
+    <item name="colorPrimary">@color/bluegray</item>
+    <item name="colorPrimaryVariant">@color/bluegraydark</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/blue_200</item>
+    <item name="colorSecondaryVariant">@color/bluedark</item>
+    <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor" tools:targetApi="l">
+      ?attr/colorPrimaryVariant
+    </item>
+    <!-- Customize your theme here. -->
+    <item name= "android:fontFamily" > @font/montserrat </item>
+  </style>
+
+  <!-- Gray and Orange Theme. -->
+  <style name="Theme.GrayAndOrange" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Primary brand color. -->
+    <item name="colorPrimary">@color/gray_700</item>
+    <item name="colorPrimaryVariant">@color/gray_800</item>
+    <item name="colorOnPrimary">@color/white</item>
+    <!-- Secondary brand color. -->
+    <item name="colorSecondary">@color/orange_500</item>
+    <item name="colorOnSecondary">@color/black</item>
+    <!-- Status bar color. -->
+    <item name="android:statusBarColor" tools:targetApi="l">
+      ?attr/colorPrimaryVariant
+    </item>
+    <!-- Customize your theme here. -->
+    <item name= "android:fontFamily" > @font/montserrat </item>
+  </style>
 </resources>
