--- a/app/src/main/res/layout/activity_add_new_story.xml
+++ b/app/src/main/res/layout/activity_add_new_story.xml
@@ -25,13 +25,35 @@
       app:layout_constraintTop_toBottomOf="@id/InputStoryMainBody"
       app:layout_constraintLeft_toRightOf="@id/LoggedInUserImage"
       />
+  <androidx.cardview.widget.CardView
+      android:id="@+id/InputStoryImageCard"
+      android:layout_width="240dp"
+      android:layout_height="240dp"
+      app:cardCornerRadius="5dp"
+      app:cardElevation="4dp"
+      android:layout_margin="8dp"
+      android:background="@drawable/border_text_box"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toTopOf="parent">
+
+    <ImageView
+        android:id="@+id/InputStoryImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:cropToPadding="true"
+        android:gravity="center"
+        android:scaleType="centerCrop" />
+  </androidx.cardview.widget.CardView>
+
   <ImageView
-      android:id="@+id/InputStoryImage"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:minHeight="150dp"
-      app:layout_constraintBottom_toTopOf="@id/InputStoryTitle"
+      android:id="@+id/AddImageButton"
+      android:layout_width="wrap_content"
+      android:layout_height="150dp"
+      android:layout_margin="10dp"
       app:layout_constraintTop_toTopOf="parent"
+      app:layout_constraintBottom_toTopOf="@id/InputStoryTitle"
+      app:layout_constraintLeft_toRightOf="@id/InputStoryImageCard"
+      android:gravity="center"
       app:srcCompat="@drawable/add_image_button" />
 
   <EditText
@@ -39,14 +61,14 @@
       android:minHeight="50dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_margin="6dp"
+      android:layout_margin="8dp"
       android:padding="12dp"
       android:background="@drawable/border_text_box"
       android:ems="10"
       android:hint="Title"
       android:maxLength="80"
       android:inputType="textMultiLine|textCapSentences|textAutoComplete"
-      app:layout_constraintTop_toBottomOf="@id/InputStoryImage"
+      app:layout_constraintTop_toBottomOf="@id/InputStoryImageCard"
        />
 
   <EditText
@@ -54,7 +76,7 @@
       android:minHeight="240dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_margin="6dp"
+      android:layout_margin="8dp"
       android:padding="12dp"
       android:background="@drawable/border_text_box"
       android:ems="10"
