Add scroll to new story form

--- a/app/src/main/res/menu/main_activity_option_menu.xml
+++ b/app/src/main/res/menu/main_activity_option_menu.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
   <item
+      android:id="@+id/HomeButtonMenuItem"
+      android:icon="@drawable/home_icon"
+      android:title="HomeButtonMenuItem"
+      app:showAsAction="always" />
+  <item
       android:id="@+id/UserProfileMenuItem"
       android:enabled="true"
       android:icon="@drawable/user_icon"
