--- a/app/src/main/res/layout/activity_add_new_story.xml
+++ b/app/src/main/res/layout/activity_add_new_story.xml
@@ -6,98 +6,99 @@
     android:layout_height="match_parent"
     tools:context="com.android.StoryList.AddNewStory">
 
-  <ImageView
-      android:id="@+id/LoggedInUserImage"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:padding="12dp"
-      app:srcCompat="@drawable/user_icon_dark"
-      app:layout_constraintTop_toBottomOf="@id/InputStoryMainBody"
-      app:layout_constraintLeft_toLeftOf="parent"
-      />
-  <TextView
-      android:id="@+id/LoggedInUserName"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:paddingVertical="12dp"
-      android:text="anonymous"
-      android:textSize="14sp"
-      app:layout_constraintTop_toBottomOf="@id/InputStoryMainBody"
-      app:layout_constraintLeft_toRightOf="@id/LoggedInUserImage"
-      />
-  <androidx.cardview.widget.CardView
-      android:id="@+id/InputStoryImageCard"
-      android:layout_width="240dp"
-      android:layout_height="240dp"
-      app:cardCornerRadius="5dp"
-      app:cardElevation="4dp"
-      android:layout_margin="8dp"
-      android:background="@drawable/border_text_box"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintTop_toTopOf="parent">
-
-    <ImageView
-        android:id="@+id/InputStoryImage"
-        android:layout_width="wrap_content"
+  <ScrollView
+      android:id="@+id/AddStoryFormScrollView"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent" >
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:cropToPadding="true"
-        android:gravity="center"
-        android:scaleType="fitCenter" />
-  </androidx.cardview.widget.CardView>
+        android:orientation="vertical">
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_weight="1"
+          android:orientation="horizontal">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/InputStoryImageCard"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/border_text_box"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="4dp">
 
-  <ImageView
-      android:id="@+id/AddImageButton"
-      android:layout_width="wrap_content"
-      android:layout_height="150dp"
-      android:layout_margin="10dp"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintBottom_toTopOf="@id/InputStoryTitle"
-      app:layout_constraintLeft_toRightOf="@id/InputStoryImageCard"
-      android:gravity="center"
-      app:srcCompat="@drawable/add_image_button" />
-
-  <EditText
-      android:id="@+id/InputStoryTitle"
-      android:minHeight="50dp"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:padding="12dp"
-      android:background="@drawable/border_text_box"
-      android:ems="10"
-      android:hint="Title"
-      android:maxLength="80"
-      android:inputType="textMultiLine|textCapSentences|textAutoComplete"
-      app:layout_constraintTop_toBottomOf="@id/InputStoryImageCard"
-       />
-
-  <EditText
-      android:id="@+id/InputStoryMainBody"
-      android:minHeight="240dp"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="8dp"
-      android:padding="12dp"
-      android:background="@drawable/border_text_box"
-      android:ems="10"
-      android:gravity="start|top"
-      android:hint="Description"
-      android:maxLength="1000"
-      android:inputType="textMultiLine|textCapSentences|textAutoComplete"
-      app:layout_constraintTop_toBottomOf="@id/InputStoryTitle"
-       />
-  <Button
-      android:id="@+id/PostNewStoryButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:layout_marginTop="20dp"
-      android:padding="10dp"
-      android:text="Post New Story"
-      android:textSize="16sp"
-      app:layout_constraintRight_toRightOf="parent"
-      app:layout_constraintLeft_toLeftOf="parent"
-      app:layout_constraintTop_toBottomOf="@id/LoggedInUserName" />
+          <ImageView
+              android:id="@+id/InputStoryImage"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:cropToPadding="true"
+              android:gravity="center"
+              android:scaleType="fitCenter" />
+        </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/AddImageButton"
+            android:layout_width="wrap_content"
+            android:layout_height="150dp"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            app:srcCompat="@drawable/add_image_button" />
+      </LinearLayout>
+      <EditText
+          android:id="@+id/InputStoryTitle"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          android:padding="12dp"
+          android:background="@drawable/border_text_box"
+          android:ems="10"
+          android:hint="Title"
+          android:inputType="textMultiLine|textCapSentences|textAutoComplete"
+          android:maxLength="80"
+          android:minHeight="50dp" />
+      <EditText
+          android:id="@+id/InputStoryMainBody"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="8dp"
+          android:padding="12dp"
+          android:background="@drawable/border_text_box"
+          android:ems="10"
+          android:gravity="start|top"
+          android:hint="Description"
+          android:inputType="textMultiLine|textCapSentences|textAutoComplete"
+          android:maxLength="1000"
+          android:minHeight="240dp" />
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/LoggedInUserImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            app:srcCompat="@drawable/user_icon_dark" />
+        <TextView
+            android:id="@+id/LoggedInUserName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingVertical="12dp"
+            android:text="anonymous"
+            android:textSize="14sp" />
+      </LinearLayout>
+      <Button
+          android:id="@+id/PostNewStoryButton"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_weight="1"
+          android:layout_marginTop="20dp"
+          android:layout_gravity="center"
+          android:padding="10dp"
+          android:text="Post New Story"
+          android:textSize="16sp" />
+    </LinearLayout>
+  </ScrollView>
 
   <ProgressBar
       android:id="@id/progressBar"
