--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -27,7 +27,6 @@
           android:padding="10dp"
           android:gravity="center_vertical"
           android:text="Admin"
-          android:textAlignment="center"
           android:textSize="16sp" />
     </LinearLayout>
     <TextView
@@ -42,50 +41,13 @@
         android:layout_height="3dp"
         android:background="@color/black"
         android:text="TextView" />
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-      <TableRow
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" >
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
-            android:layout_height="140dp"
-            android:layout_weight="1"
-            android:padding="1dp"
-            android:background="@color/black"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/antelopecanyon" />
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="140dp"
-            android:layout_weight="1"
-            android:padding="1dp"
-            android:background="@color/black"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/aqueductsegovia" />
-        <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="wrap_content"
-            android:layout_height="140dp"
-            android:layout_weight="1"
-            android:padding="1dp"
-            android:background="@color/black"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/pantheon" />
-      </TableRow>
-      <TableRow
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
-      <TableRow
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
-      <TableRow
-          android:layout_width="match_parent"
-          android:layout_height="match_parent" />
-    </TableLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@id/StoriesList"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
   </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
