--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -9,32 +9,39 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:background="#FFFFFF"
       android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="20dp"
+        android:padding="8dp"
+        android:background="@color/gray_700"
         android:orientation="horizontal">
       <ImageView
           android:id="@+id/imageView"
           android:layout_width="wrap_content"
-          android:layout_height="50dp"
-          app:srcCompat="@drawable/user_icon_dark" />
+          android:layout_height="35dp"
+          app:srcCompat="@drawable/user_icon" />
       <TextView
-          android:id="@+id/textView"
+          android:id="@+id/ProfilePageDisplayName"
           android:layout_width="wrap_content"
-          android:layout_height="50dp"
-          android:padding="10dp"
+          android:layout_height="35dp"
+          android:padding="8dp"
           android:gravity="center_vertical"
           android:text="Admin"
+          android:textColor="@color/white"
           android:textSize="16sp" />
     </LinearLayout>
     <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:text="This page is under construction. The stories you have added will appear below. Click here to go back." />
+        android:padding="8dp"
+        android:background="@color/gray_700"
+        android:paddingVertical="0dp"
+        android:text="The stories you have added will appear below."
+        android:textColor="@color/white"
+        android:textSize="14sp" />
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
@@ -45,8 +52,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@id/StoriesList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
   </LinearLayout>
 
 
