--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.StoryList.MainActivity">
+    tools:context="com.stories.StoryList.MainActivity">
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/StoriesList"
       android:layout_width="match_parent"
