--- a/app/src/main/res/layout/user_profile_activity.xml
+++ b/app/src/main/res/layout/user_profile_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.android.StoryList.UserProfile">
+    tools:context="com.stories.StoryList.UserProfile">
 
   <LinearLayout
       android:layout_width="match_parent"
